--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dobby",
-  "version": "0.0.1",
+  "version": "0.8.0",
   "description": "humble and free wordpress starter optimized for my needs and methods. ",
   "main": "index.php",
   "scripts": {
@@ -23,12 +23,15 @@
   },
   "homepage": "https://github.com/svirmasalo/Dobby#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2016": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11"
